Some commits. I apparently did so much without committing that it's basically almost all of the functionality I've developed so far

--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -14,6 +14,9 @@
 
   <extensions defaultExtensionNs="com.intellij">
     <completion.contributor language="XML" order="first, before xml" implementationClass="com.jetbrains.rdclient.completion.ProtocolCompletionContributor" />
+    <lang.documentationProvider language="XML" implementationClass="com.jetbrains.rdclient.quickDoc.FrontendDocumentationProvider"/>
+    <backend.actions.support language="XML" implementationClass="com.jetbrains.rider.actions.RiderActionSupportPolicy" />
+
   </extensions>
   
 </idea-plugin>
