--- a/src/dotnet/ReSharperPlugin.RimworldDev/ReSharperPlugin.RimworldDev.csproj
+++ b/src/dotnet/ReSharperPlugin.RimworldDev/ReSharperPlugin.RimworldDev.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <LanguageTargets>$(MSBuildToolsPath)\Microsoft.CSharp.targets</LanguageTargets>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>10</LangVersion>
   </PropertyGroup>
 
   <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
@@ -30,10 +30,10 @@
 
   <!-- WARNING: ReSharper plugins with icons must be compiled using PowerShell scripts -->
   <!-- TODO: uncomment for xaml icons -->
-  <!--<ItemGroup>-->
-    <!--<Reference Include="System.Xaml" />-->
-    <!--<Reference Include="WindowsBase" />-->
-  <!--</ItemGroup>-->
+<!--  <ItemGroup>-->
+<!--    <Reference Include="System.Xaml" />-->
+<!--    <Reference Include="WindowsBase" />-->
+<!--  </ItemGroup>-->
 
   <!--<ItemGroup Condition="'$(OS)' != 'Unix'">-->
     <!--<Reference Include="PresentationCore" />-->
