--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -1,14 +1,14 @@
 <idea-plugin require-restart="true">
   <id>com.jetbrains.rider.plugins.rimworlddev</id>
   <name>RimworldDev</name>
-  <version>_PLACEHOLDER_</version>
-  <vendor url="https://project-url">Author</vendor>
-  <idea-version since-build="_PLACEHOLDER_" until-build="_PLACEHOLDER_" />
+  <version>0.0.1-alpha-1</version>
+  <vendor url="https://github.com/Garethp/Rider-RimworldDevelopment">Garethp</vendor>
+  <idea-version since-build="222" />
   <depends>com.intellij.modules.rider</depends>
 
   <description>
 <![CDATA[
-<p>Sample description</p>
+<p>This is the first alpha of the WIP Rimworld Development Plugin</p>
 ]]>
   </description>
 
@@ -16,7 +16,6 @@
     <completion.contributor language="XML" order="first, before xml" implementationClass="com.jetbrains.rdclient.completion.ProtocolCompletionContributor" />
     <lang.documentationProvider language="XML" implementationClass="com.jetbrains.rdclient.quickDoc.FrontendDocumentationProvider"/>
     <backend.actions.support language="XML" implementationClass="com.jetbrains.rider.actions.RiderActionSupportPolicy" />
-
   </extensions>
   
 </idea-plugin>
