--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -1,14 +1,14 @@
 <idea-plugin require-restart="true">
   <id>com.jetbrains.rider.plugins.rimworlddev</id>
   <name>RimworldDev</name>
-  <version>0.0.1-alpha-1</version>
+  <version>2023.1-alpha</version>
   <vendor url="https://github.com/Garethp/Rider-RimworldDevelopment">Garethp</vendor>
   <idea-version since-build="222" />
   <depends>com.intellij.modules.rider</depends>
 
   <description>
 <![CDATA[
-<p>This is the first alpha of the WIP Rimworld Development Plugin</p>
+<p>An alpha release of my still-in-development Rimworld plugin</p>
 ]]>
   </description>
 
