--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 DotnetPluginId=ReSharperPlugin.RimworldDev
 DotnetSolution=ReSharperPlugin.RimworldDev.sln
 RiderPluginId=com.jetbrains.rider.plugins.rimworlddev
-PluginVersion=2023.1-ALPHA
+PluginVersion=2023.1-ALPHA-1
 
 BuildConfiguration=Release
 
