--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -1,14 +1,14 @@
 <idea-plugin require-restart="true">
   <id>com.jetbrains.rider.plugins.rimworlddev</id>
   <name>RimworldDev</name>
-  <version>2023.1-ALPHA-4</version>
+  <version>2023.1</version>
   <vendor url="https://github.com/Garethp/Rider-RimworldDevelopment">Garethp</vendor>
   <idea-version since-build="231" />
   <depends>com.intellij.modules.rider</depends>
 
   <description>
 <![CDATA[
-<p>An alpha release of my still-in-development Rimworld plugin</p>
+<p>A plugin to enhance your development environment for creating Rimworld Mods</p>
 ]]>
   </description>
 
