--- a/src/dotnet/ReSharperPlugin.RimworldDev/ReSharperPlugin.RimworldDev.csproj
+++ b/src/dotnet/ReSharperPlugin.RimworldDev/ReSharperPlugin.RimworldDev.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.ReSharper.SDK" Version="2022.2.4" PrivateAssets="all" />
+    <PackageReference Include="Wave" Version="$(WaveVersion)" />
     <!-- TODO: https://github.com/NuGet/Home/issues/7154 -->
   </ItemGroup>
 
