Automatically bundle Doorstop into debug build, allow non-debug runs, add in a Rimworld Mod Template

--- a/build.gradle
+++ b/build.gradle
@@ -175,6 +175,8 @@ prepareSandbox {
         from(file, { into "${rootProject.name}/dotnet" })
     })
 
+    from("${rootDir}/src/dotnet/${DotnetPluginId}/projectTemplates", { into "${rootProject.name}/projectTemplates"})
+
     doLast {
         dllFiles.forEach({ f ->
             def file = file(f)
