--- a/src/dotnet/ReSharperPlugin.RimworldDev/ReSharperPlugin.RimworldDev.csproj
+++ b/src/dotnet/ReSharperPlugin.RimworldDev/ReSharperPlugin.RimworldDev.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.ReSharper.SDK" Version="2023.1.1" PrivateAssets="all" />
+    <PackageReference Include="JetBrains.Rider.Rider.Backend" Version="231.0.20230421.165403" />
     <PackageReference Include="Wave" Version="$(WaveVersion)" />
     <!-- TODO: https://github.com/NuGet/Home/issues/7154 -->
   </ItemGroup>
@@ -26,6 +27,21 @@
     <Content Include="bin\$(AssemblyName)\$(Configuration)\$(AssemblyName).pdb" PackagePath="dotFiles" Pack="true" />
 
     <!-- TODO: add additional assemblies -->
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Compile Remove="projectTemplates\**" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <EmbeddedResource Remove="projectTemplates\**" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <None Remove="projectTemplates\**" />
   </ItemGroup>
 
   <!-- WARNING: ReSharper plugins with icons must be compiled using PowerShell scripts -->
