--- a/build.gradle
+++ b/build.gradle
@@ -115,7 +115,7 @@ intellij {
     downloadSources = false
     instrumentCode = false
     // TODO: add plugins
-    // plugins = ["uml", "com.jetbrains.ChooseRuntime:1.0.9"]
+     plugins = ["rider-unity"]
 }
 
 runIde {
@@ -133,7 +133,7 @@ runIde {
 rdgen {
     def modelDir = new File(rootDir, "protocol/src/main/kotlin/model")
     def csOutput = new File(rootDir, "src/dotnet/${DotnetPluginId}/Rider")
-    def ktOutput = new File(rootDir, "src/rider/main/kotlin/${RiderPluginId.replace('.','/').toLowerCase()}")
+    def ktOutput = new File(rootDir, "src/rider/main/kotlin/")
 
     verbose = true
     classpath {
@@ -174,6 +174,8 @@ prepareSandbox {
         def file = file(f)
         from(file, { into "${rootProject.name}/dotnet" })
     })
+
+    from("${rootDir}/src/dotnet/${DotnetPluginId}/projectTemplates", { into "${rootProject.name}/projectTemplates"})
 
     doLast {
         dllFiles.forEach({ f ->
