--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -19,6 +19,7 @@ in your mods!</p>
 <![CDATA[
 <p><ul>
 <li>Rimworld XML will now exist as it's own project</li>
+<li>Added some new problem analyzers to catch simple typing errors in Rimworld XML</li>
 </ul></p>
 ]]>
   </change-notes>
