--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -1,9 +1,9 @@
 <idea-plugin require-restart="true">
   <id>com.jetbrains.rider.plugins.rimworlddev</id>
   <name>Rimworld Development Environment</name>
-  <version>2023.3red.1</version>
+  <version>2023.3.2</version>
   <vendor url="https://github.com/Garethp/Rider-RimworldDevelopment">Garethp</vendor>
-  <idea-version since-build="231" />
+  <idea-version since-build="233" />
   <depends>com.intellij.modules.rider</depends>
   <depends>com.intellij.resharper.unity</depends>
 
@@ -18,10 +18,7 @@ in your mods!</p>
   <change-notes>
 <![CDATA[
 <p><ul>
-<li>Fixed a rare crash when the plugin was completely unable to locate Rimworld</li>
-<li>Fixed automatic Rimworld detection when Rimworld is installed through Steam on the C: drive</li>
-<li>Fixed some false positives on error checking in XML</li>
-<li>Added more mod folders to the XML Project that gets added automatically</li>
+<li>Updated to work with Rider 2023.3</li>
 </ul></p>
 ]]>
   </change-notes>
