--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -20,6 +20,7 @@ in your mods!</p>
 <p><ul>
 <li>Added a Find Usages for XML Defs</li>
 <li>Improved detection of various properties that weren't being picked up as references before</li>
+<li>Add a new "Generate" menu feature to add props to your XML</li>
 </ul></p>
 ]]>
   </change-notes>
