Updating TODO, Changelog and removing roadmap from README

--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -19,8 +19,9 @@ in your mods!</p>
 <![CDATA[
 <p><ul>
 <li>Added a Find Usages for XML Defs</li>
-<li>Improved detection of various properties that weren't being picked up as references before</li>
+<li>Added support for Custom Def Classes</li>
 <li>Add a new "Generate" menu feature to add props to your XML</li>
+<li>Improved detection of various properties that weren't being picked up as references before</li>
 </ul></p>
 ]]>
   </change-notes>
