--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin require-restart="true">
   <id>com.jetbrains.rider.plugins.rimworlddev</id>
   <name>Rimworld Development Environment</name>
-  <version>2023.3.3</version>
+  <version>2023.4</version>
   <vendor url="https://github.com/Garethp/Rider-RimworldDevelopment">Garethp</vendor>
   <idea-version since-build="233" />
   <depends>com.intellij.modules.rider</depends>
@@ -18,7 +18,10 @@ in your mods!</p>
   <change-notes>
 <![CDATA[
 <p><ul>
-<li>Fixed some missed API Changes in Rider 2023.3.3</li>
+<li>Added a Find Usages for XML Defs</li>
+<li>Added support for Custom Def Classes</li>
+<li>Add a new "Generate" menu feature to add props to your XML</li>
+<li>Improved detection of various properties that weren't being picked up as references before</li>
 </ul></p>
 ]]>
   </change-notes>
