--- a/src/dotnet/ReSharperPlugin.RimworldDev/ReSharperPlugin.RimworldDev.Rider.csproj
+++ b/src/dotnet/ReSharperPlugin.RimworldDev/ReSharperPlugin.RimworldDev.Rider.csproj
@@ -22,9 +22,9 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" />
-    <PackageReference Include="JetBrains.Lifetimes" Version="2023.3.3" />
-    <PackageReference Include="JetBrains.RdFramework" Version="2023.3.3" />
-    <PackageReference Include="JetBrains.Rider.SDK" Version="2023.3.1">
+    <PackageReference Include="JetBrains.Lifetimes" Version="2024.1.1" />
+    <PackageReference Include="JetBrains.RdFramework" Version="2024.1.1" />
+    <PackageReference Include="JetBrains.Rider.SDK" Version="2024.1.0-eap09">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
