--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin require-restart="true">
   <id>com.jetbrains.rider.plugins.rimworlddev</id>
   <name>Rimworld Development Environment</name>
-  <version>2023.4</version>
+  <version>2024.1-EAP</version>
   <vendor url="https://github.com/Garethp/Rider-RimworldDevelopment">Garethp</vendor>
   <idea-version since-build="241" />
   <depends>com.intellij.modules.rider</depends>
@@ -18,10 +18,8 @@ in your mods!</p>
   <change-notes>
 <![CDATA[
 <p><ul>
-<li>Added a Find Usages for XML Defs</li>
-<li>Added support for Custom Def Classes</li>
-<li>Add a new "Generate" menu feature to add props to your XML</li>
-<li>Improved detection of various properties that weren't being picked up as references before</li>
+<li>Built for 2024.1</li>
+<li>Added References from C# to XML for DefDatabase and [DefOf]</li>
 </ul></p>
 ]]>
   </change-notes>
