--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 DotnetPluginId=ReSharperPlugin.RimworldDev
 DotnetSolution=ReSharperPlugin.RimworldDev.sln
 RiderPluginId=com.jetbrains.rider.plugins.rimworlddev
-PluginVersion=2024.1-EAP
+PluginVersion=2024.1.1
 
 BuildConfiguration=Release
 
@@ -14,7 +14,7 @@ PublishToken="_PLACEHOLDER_"
 #   Release:  2020.2
 #   Nightly:  2020.3-SNAPSHOT
 #   EAP:      2020.3-EAP2-SNAPSHOT
-ProductVersion=2024.1-EAP9-SNAPSHOT
+ProductVersion=2024.1.1
 
 # Kotlin 1.4 will bundle the stdlib dependency by default, causing problems with the version bundled with the IDE
 # https://blog.jetbrains.com/kotlin/2020/07/kotlin-1-4-rc-released/#stdlib-default
