Add a notifier for the remodder plugin

--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -35,6 +35,9 @@ in your mods!</p>
     <backend.markup.adapterFactory language="XML" implementationClass="com.jetbrains.rider.daemon.RiderCacheAwareMarkupAdapterFactory" />
 
     <spellchecker.bundledDictionaryProvider implementation="RimworldDev.Rider.spellchecker.DictionaryProvider" />
+
+    <editorNotificationProvider
+            implementation="RimworldDev.Rider.HarmonyPluginNotifier.HarmonyPluginNotifier"/>
   </extensions>
   
 </idea-plugin>
