--- a/src/rider/main/resources/META-INF/plugin.xml
+++ b/src/rider/main/resources/META-INF/plugin.xml
@@ -19,6 +19,7 @@ in your mods!</p>
 <![CDATA[
 <p><ul>
 <li>Add support for Parent="" referencesin XML defs</li>
+<li>When opening a file with Harmony Patches, adds a notifier to the user that they might want to install the Remodder plugin</li>
 </ul></p>
 ]]>
   </change-notes>
