--- a/src/dotnet/ReSharperPlugin.RimworldDev/ReSharperPlugin.RimworldDev.Rider.csproj
+++ b/src/dotnet/ReSharperPlugin.RimworldDev/ReSharperPlugin.RimworldDev.Rider.csproj
@@ -21,10 +21,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" />
-    <PackageReference Include="JetBrains.Lifetimes" Version="2024.1.1" />
-    <PackageReference Include="JetBrains.RdFramework" Version="2024.1.1" />
-    <PackageReference Include="JetBrains.Rider.SDK" Version="2024.1.0-eap09">
+    <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
+    <PackageReference Include="JetBrains.Lifetimes" Version="2024.3.1" />
+    <PackageReference Include="JetBrains.RdFramework" Version="2024.3.1" />
+    <PackageReference Include="JetBrains.Rider.SDK" Version="2024.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
