--- a/protocol/build.gradle
+++ b/protocol/build.gradle
@@ -1,17 +1,28 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm'
+    id 'org.jetbrains.intellij.platform.module'
+    id 'com.jetbrains.rdgen' version '2024.3.0'
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
-    implementation name: "rd-gen"
-    implementation name: "rider-model"
+
+    implementation "com.jetbrains.rd:rd-gen:2024.3.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.24"
+    intellijPlatform {
+        rider(ProductVersion)
+        instrumentationTools()
+        bundledPlugin "com.intellij.resharper.unity"
+    }
 }
 
 repositories {
     mavenCentral()
     flatDir {
         dirs rdLibDirectory().absolutePath
+    }
+    intellijPlatform {
+        defaultRepositories()
     }
 }
