Kotlin gradle conversion

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,9 @@ ProductVersion=2024.3
 # https://blog.jetbrains.com/kotlin/2020/07/kotlin-1-4-rc-released/#stdlib-default
 kotlin.stdlib.default.dependency=false
 org.gradle.jvmargs=-Xmx4g
+
+rdVersion=2024.3.0
+rdKotlinVersion=1.9.23
+intellijPlatformGradlePluginVersion=2.1.0
+gradleJvmWrapperVersion=0.14.0
+riderBaseVersion=2024.3
