--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
+      <clear />
     <add key="resharper-sdk" value="C:\Users\dexte\.gradle\caches\8.8\transforms\2ac78bdfd7327290b12f3344fcb44f31\transformed\JetBrains.Rider-2024.3-win\lib\DotNetSdkForRdPlugins" />
+    <add key="local-dotnet-sdk" value="C:\Users\dexte\.gradle\caches\transforms-4\c690e5d802862b08985939434836fe60\transformed\riderRD-2025.1-SNAPSHOT\lib\DotNetSdkForRdPlugins" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
