--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,6 @@ org.gradle.jvmargs=-Xmx4g
 
 rdVersion=2024.3.0
 rdKotlinVersion=1.9.23
-intellijPlatformGradlePluginVersion=2.1.0
+intellijPlatformGradlePluginVersion=2.0.0-beta8
 gradleJvmWrapperVersion=0.14.0
 riderBaseVersion=2024.3
