--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ ProductVersion=2024.3
 kotlin.stdlib.default.dependency=false
 org.gradle.jvmargs=-Xmx4g
 
-rdVersion=2024.3.0
+rdVersion=2024.3-pre2
 rdKotlinVersion=1.9.23
 intellijPlatformGradlePluginVersion=2.0.0-beta8
 gradleJvmWrapperVersion=0.14.0
