--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 DotnetPluginId=ReSharperPlugin.RimworldDev
 DotnetSolution=ReSharperPlugin.RimworldDev.sln
 RiderPluginId=com.jetbrains.rider.plugins.rimworlddev
-PluginVersion=2024.1.2
+PluginVersion=2024.1.3
 
 BuildConfiguration=Release
 
@@ -20,3 +20,9 @@ ProductVersion=2024.3
 # https://blog.jetbrains.com/kotlin/2020/07/kotlin-1-4-rc-released/#stdlib-default
 kotlin.stdlib.default.dependency=false
 org.gradle.jvmargs=-Xmx4g
+
+rdVersion=2024.1.1
+rdKotlinVersion=2.1.0
+intellijPlatformGradlePluginVersion=2.2.1
+gradleJvmWrapperVersion=0.14.0
+riderBaseVersion=2024.3
