Update the output name to not break on merges

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: ${{ github.event.repository.name }}.CI.${{ github.ref_name }}
+          name: ${{ github.event.repository.name }}.CI.${{ github.head_ref || github.ref_name }}
           path: output
   Test:
     runs-on: windows-latest
