--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,14 +6,15 @@ jobs:
   Build:
     runs-on: windows-latest
     steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - name: configure_java
         uses: actions/setup-java@v4
         with:
           distribution: 'corretto'
           java-version: '17'
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
+          cache: 'gradle'
       - uses: actions/cache@v4
         with:
           path: |
@@ -31,14 +32,15 @@ jobs:
   Test:
     runs-on: windows-latest
     steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - name: configure_java
         uses: actions/setup-java@v4
         with:
           distribution: 'corretto'
           java-version: '17'
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
+          cache: 'gradle'
       - uses: actions/cache@v4
         with:
           path: |
