--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 DotnetPluginId=ReSharperPlugin.RimworldDev
 DotnetSolution=ReSharperPlugin.RimworldDev.sln
 RiderPluginId=com.jetbrains.rider.plugins.rimworlddev
-PluginVersion=2024.1.1
+PluginVersion=2024.1.3
 
 BuildConfiguration=Release
 
@@ -14,9 +14,15 @@ PublishToken="_PLACEHOLDER_"
 #   Release:  2020.2
 #   Nightly:  2020.3-SNAPSHOT
 #   EAP:      2020.3-EAP2-SNAPSHOT
-ProductVersion=2024.1.1
+ProductVersion=2024.3
 
 # Kotlin 1.4 will bundle the stdlib dependency by default, causing problems with the version bundled with the IDE
 # https://blog.jetbrains.com/kotlin/2020/07/kotlin-1-4-rc-released/#stdlib-default
 kotlin.stdlib.default.dependency=false
 org.gradle.jvmargs=-Xmx4g
+
+rdVersion=2024.1.1
+rdKotlinVersion=2.1.0
+intellijPlatformGradlePluginVersion=2.2.1
+gradleJvmWrapperVersion=0.14.0
+riderBaseVersion=2024.3
