--- a/src/dotnet/ReSharperPlugin.RimworldDev/ReSharperPlugin.RimworldDev.Rider.csproj
+++ b/src/dotnet/ReSharperPlugin.RimworldDev/ReSharperPlugin.RimworldDev.Rider.csproj
@@ -22,9 +22,9 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
-    <PackageReference Include="JetBrains.Lifetimes" Version="2025.1.0" />
-    <PackageReference Include="JetBrains.RdFramework" Version="2025.1.0" />
-    <PackageReference Include="JetBrains.Rider.SDK" Version="2025.1.0">
+    <PackageReference Include="JetBrains.Lifetimes" Version="$(SdkVersion)" />
+    <PackageReference Include="JetBrains.RdFramework" Version="$(SdkVersion)" />
+    <PackageReference Include="JetBrains.Rider.SDK" Version="$(SdkVersion)">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -46,30 +46,6 @@
   <ItemGroup>
     <None Remove="projectTemplates\**" />
   </ItemGroup>
-
-  <!-- TODO: uncomment for xaml icons -->
-  <!--<ItemGroup>-->
-    <!--<Reference Include="System.Xaml" />-->
-    <!--<Reference Include="WindowsBase" />-->
-  <!--</ItemGroup>-->
-
-  <!--<ItemGroup Condition="'$(OS)' != 'Unix'">-->
-    <!--<Reference Include="PresentationCore" />-->
-    <!--<Reference Include="PresentationFramework" />-->
-
-    <!--<ThemedIconsXamlV3 Include="**\*-color.xaml">-->
-      <!--<ThemeColumns>Color</ThemeColumns>-->
-      <!--<RemoveBackgroundElement>True</RemoveBackgroundElement>-->
-      <!--<SubType>Designer</SubType>-->
-      <!--<Generator>MSBuild:Compile</Generator>-->
-    <!--</ThemedIconsXamlV3>-->
-    <!--<ThemedIconsXamlV3 Include="**\*-graydark.xaml">-->
-      <!--<ThemeColumns>GrayDark</ThemeColumns>-->
-      <!--<RemoveBackgroundElement>True</RemoveBackgroundElement>-->
-      <!--<SubType>Designer</SubType>-->
-      <!--<Generator>MSBuild:Compile</Generator>-->
-    <!--</ThemedIconsXamlV3>-->
-  <!--</ItemGroup>-->
 
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 
