Add resharper build to gradle and test nuget on Github Workflows

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,9 @@ jobs:
           distribution: 'corretto'
           java-version: '21'
           cache: 'gradle'
+      - uses: nuget/setup-nuget@v2
+        with:
+          nuget-version: 'latest'
       - uses: actions/cache@v4
         with:
           path: |
@@ -24,6 +27,8 @@ jobs:
             ~/.gradle/wrapper
           key: ${{ runner.os }}-Build-${{ hashFiles('gradlew.bat', 'src/dotnet/*/*.csproj', 'src/dotnet/*.props', 'gradle-wrapper.properties') }}
       - run: ./gradlew :buildPlugin --no-daemon
+      - run: ./gradlew :buildResharperPlugin --no-daemon
+      - run: nuget --help
       - uses: actions/upload-artifact@v4
         if: always()
         with:
